Fix marker cursor not showing on trip form

--- a/frontend/modules/planner/planner.component.css
+++ b/frontend/modules/planner/planner.component.css
@@ -55,6 +55,6 @@
 .main-components-wrapper {
   position: absolute;
   right: 0;
-  z-index: 999;
+  z-index: 499;
   width: 370px;
 }
